[package]
name = "ethereum-types"
version = "0.9.4"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paritytech/parity-common"
description = "Ethereum types"
edition = "2018"

[dependencies]
ethbloom = { path = "../ethbloom", version = "0.9", default-features = false }
fixed-hash = { path = "../fixed-hash", version = "0.6", default-features = false, features = ["byteorder", "rustc-hex"] }
uint-crate = { path = "../uint", package = "uint", version = "0.8", default-features = false }
primitive-types = { path = "../primitive-types", version = "=0.7.4", features = ["rlp", "byteorder", "rustc-hex", "codec"], default-features = false }
impl-serde = { path = "../primitive-types/impls/serde", version = "=0.3.2", default-features = false, optional = true }
impl-rlp = { path = "../primitive-types/impls/rlp", version = "0.2", default-features = false }
impl-codec = { version = "0.4.1", path = "../primitive-types/impls/codec", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.41"

[features]
default = ["std", "serialize"]
std = ["uint-crate/std", "fixed-hash/std", "primitive-types/std"]
serialize = ["impl-serde", "primitive-types/serde", "ethbloom/serialize"]
serialize_no_std = ["impl-serde", "primitive-types/serde_no_std", "ethbloom/serialize"]
arbitrary = ["fixed-hash/arbitrary", "uint-crate/arbitrary"]
codec = ["impl-codec"]
